# The_Ultimate_FloorPlan

./: .gitignore  README.md  package-lock.json  pyproject.toml
backend/: app.py  modal_app.py  requirements.txt
examples/: bathroom.labels.json  bathroom.sam.labels.json  fancy.sam2.labels.json  output_mesh.glb  output_mesh.ply  scene_example.edited.json  scene_example.edited.preview.txt  scene_example.json
examples/auto_edit/: auto_edit_report.json  auto_labels.json
examples/auto_edit_fancy_quick3/: labels.json
examples/auto_edit_fancy_v2/: auto_edit_report.json  auto_labels.json
examples/auto_edit_fancy_v3/: auto_labels.json
examples/auto_edit_lounge_quick6/: auto_edit_report.json  auto_labels.json
examples/auto_object_edit_fancy/: auto_labels.json  auto_object_edit_report.json  object_edit_report.json
examples/auto_object_edit_fancy_sam2/: auto_labels.json  auto_object_edit_report.json  edited_labels.json  object_edit_report.json
examples/auto_object_edit_fancy_sam2_fast/: auto_labels.json  auto_object_edit_report.json  edited_labels.json  object_edit_report.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
generate_3d_asset/: modal_shape_e_generate_shap_e.py
scripts/: generate_and_place_shap_e_asset.py  place_asset_in_scene.py  splat_ply_to_mesh_ply.py  video_to_frames.py
src/: Dockerfile.openmvs  Dockerfile.openmvs.cdcseacave  buildInDocker.sh
tools/: clean_splat_ply.py  mesh_from_splat.py  print_bbox.py
viewer/: index.html  index_glb.html  main.js  main_glb.js  package-lock.json  package.json  run-with-glb.mjs  run-with-ply.mjs  run-world.mjs  styles.css
(+118 files in other folders)
