[project]
name = "floorplan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bhushan Mohanraj", email = "50306448+bhushan-mohanraj@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "modal>=1.3.3",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "plyfile>=1.1.3",
    "scikit-learn>=1.8.0",
]

[project.scripts]
floorplan = "floorplan:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
